Fix tooltip flicker

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -22,6 +22,11 @@
 	color: #fff;
 }
 
+/*Change the size here*/
+div.tooltip-inner {
+    max-width: 350px;
+}
+
 a.white:hover {
 	color: #000;
 	opacity: 0.4;
